# agent-skills

./: .gitignore  README.md  TRIGGERS.md  common.sh  deploy.sh  skills-broadcast
skills/: .gitignore  01_CONSUME_SKILLS.md  01_SECURITY_COMPLIANCE_TASKS.md  0N_DISCOVER_SKILLS_TASKS.md  0N_TASKS.md  CONVENTIONS.md  README.md  TRIGGERS.md  common.sh  movie_ingest_review.md  pyproject.toml  rate_limit_recovery_claude_20260125_090045.markdown  sanity.sh  status.py  verify-all.sh  verify_refactors.sh  youtube_transcript.py
skills/agent-inbox/: 01_HEADLESS_DISPATCH_TASKS.md  SKILL.md  dispatcher.py  inbox.py  integration_test.sh  pyproject.toml  run.sh  sanity.sh  task_monitor_client.py  triage.py
skills/analytics/: SKILL.md  pyproject.toml  run.sh  sanity.sh
skills/anvil/: pyproject.toml  run.sh  sanity.sh
skills/arango-ops/: SKILL.md  pyproject.toml  run.sh  sanity.sh
skills/arxiv/: arxiv_cli.py  arxiv_learn.py  config.py  download.py  extraction.py  memory_storage.py  pyproject.toml  run.sh  sanity.sh  search.py  utils.py
skills/arxiv-learn/: pyproject.toml  run.sh  sanity.sh
skills/assess/: assess.py  pyproject.toml  run.sh  sanity.sh  test_doc_pruning.sh
skills/audiobook-ingest/: monitor_tui.py  run-faster.sh  run.sh  transcribe_runner.py  watchdog.py
skills/batch-quality/: cli.py  pyproject.toml  run.sh  sanity.sh
skills/batch-report/: pyproject.toml  report.py  run.sh  sanity.sh
skills/battle/: 01_TASKS.md  02_QEMU_TWIN_TASKS.md  __init__.py  __main__.py  battle.py  battle_monolith.py  blue_team.py  config.py  digital_twin.py  dogpile_state.json  memory.py  orchestrator.py  pyproject.toml  qemu_support.py  red_team.py  report.py  review_request.md  review_request_r2.md  run.sh  sanity.sh  scoring.py  state.py
skills/brave-search/: pyproject.toml  run.sh
skills/clarify/: SKILL.md  __init__.py  api.py  runner.py  server.py  tui.py  types.py
skills/cleanup/: cleanup.py  pyproject.toml  run.sh  sanity.sh  test_cleanup.py
skills/code-review/: README.md  SKILL.md  code_review.py  config.py  diff_parser.py  prompts.py  pyproject.toml  run.sh  sanity.sh
skills/codex/: codex.py  dogpile_schema.json  pyproject.toml  query_tailor_schema.json  run.sh  sanity.sh
skills/common/: __init__.py  memory_client.py  taxonomy.py
skills/compliance-ops/: SKILL.md  TRIGGERS.md  compliance_ops.py  memory_integration.py  pyproject.toml  report.py  run.sh  sanity.sh  task_monitor_integration.py
skills/consume-book/: __init__.py  epub.py  ingest_bridge.py  list.py  notes.py  position.py  pyproject.toml  run.sh  search.py
skills/consume-common/: memory_bridge.py  notes.py
skills/consume-feed/: REVIEW_BRUTAL.md  SKILL.md  cli.py  config.py  feed_config.py  feed_runner.py  feed_storage.py  pyproject.toml  run.sh  runner.py  storage.py  walkthrough.md
skills/consume-movie/: __init__.py  book_context.py  list.py  notes.py  pyproject.toml  run.sh  search.py  watch.py
skills/consume-music/: 01_TASKS.md
skills/consume-youtube/: __init__.py  indexer.py  ingest_bridge.py  list.py  notes.py  pyproject.toml  run.sh  search.py
skills/consume_common/: WORKFLOW.md  __init__.py  registry.py
skills/context7/: SKILL.md  pyproject.toml  run.sh
skills/create-code/: .create-code.json  SKILL.md  dogpile_state.json  orchestrator.py  pyproject.toml  review_request.md  run.sh  sanity.sh
skills/create-figure/: .gitignore  analysis.py  fixture_graph.py  modularization_review_request.md  plotly_backend.py  pyproject.toml  run.sh  sanity.sh  utils.py  validation.py
skills/create-icon/: sanity.sh
skills/create-image/: pyproject.toml  sanity.sh
skills/create-movie/: 0N_TASKS.md  Dockerfile  RESEARCH_SYNTHESIS.md  SKILL.md  orchestrator.py  pyproject.toml  run.sh  sanity.sh
skills/create-paper/: analysis.py  citations.py  compliance.py  config.py  mimic.py  paper_writer.py  paper_writer_monolith.py  pyproject.toml  rag.py  request.md  research.py  run.sh  sanity.sh  utils.py
skills/create-pdf-fixture/: generate.py  pyproject.toml
skills/create-story/: SKILL.md  orchestrator.py  pyproject.toml  run.sh  sanity.sh
skills/create-storyboard/: 0N_TASKS.md  REVIEW_BRUTAL.md  VERIFICATION_REPORT.md  animatic_assembler.py  camera_planner.py  collaboration.py  creative_suggestions.py  memory_bridge.py  orchestrator.py  panel_generator.py  post_fix_review_request.md  pyproject.toml  research_bridge.py  run.sh  screenplay_parser.py  shot_taxonomy.py  simple_request.md  storyboard_review_request.md
skills/create-table/: generate.py
skills/darpa-ops/: darpa_ops.py  run.sh  sanity.sh
skills/debug-fetcher/: pyproject.toml  run.sh
skills/debug-pdf/: 01_PATTERN_DETECTION_TASKS.md  debug_pdf.py  pyproject.toml  run.sh  sanity.sh
skills/discord-ops/: SKILL.md  discord_ops.py  discord_ops_monolith.py  run.sh
skills/discover-books/: pyproject.toml  run.sh  sanity.sh
skills/discover-movies/: pyproject.toml  run.sh  sanity.sh
skills/discover-music/: 01_TASKS.md  pyproject.toml  run.sh  sanity.sh
skills/distill/: SKILL.md  __main__.py  cli.py  config.py  distill.py  memory_ops.py  pyproject.toml  qra_generator.py  run.sh  utils.py
skills/doc-to-qra/: SKILL.md  pyproject.toml
skills/doc2qra/: __init__.py  __main__.py  cli.py  distill.py  grounding.py  pdf_handler.py  pyproject.toml  qra_generator.py  run.sh  sanity.sh  text_handler.py  url_handler.py
skills/docker-ops/: SKILL.md  run.sh  sanity.sh
skills/dogpile/: SKILL.md  arxiv_search.py  cli.py  codex.py  dogpile.py  dogpile_errors.json  dogpile_monolith.py  dogpile_state.json  dogpile_task_state.json  formatters.py  llm_fallback.py  monitor.py  pyproject.toml  rate_limit_state.json  readarr.py  review_request.md  run.sh  sanity.sh
skills/edge-verifier/: pyproject.toml  run.sh  sanity.sh  verify_edges.py
skills/embedding/: embed.py  pyproject.toml  run.sh  sanity.sh
skills/episodic-archiver/: archive_episode.py  pyproject.toml  run.sh  sanity.sh
skills/extractor/: README.md  SKILL.md  extract.py  pyproject.toml  run.sh  sanity.sh
skills/fetcher/: run.sh  sanity.sh
skills/fixture-graph/: SKILL.md  config.py  (+8 more)
(+830 files in other folders)
