[project]
name = "anvil"
version = "0.1.0"
description = "Heavy-duty debugging and hardening orchestrator"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2",
  "jsonschema>=4.23.0",
  "loguru>=0.7.2",
  "pillow>=12.0.0",
  "json-repair>=0.54.2",
]
