[project]
name = "arxiv-learn"
version = "0.1.0"
description = "Pipeline to ingest ArXiv papers into memory."
readme = "SKILL.md"
requires-python = ">=3.10.11"
dependencies = [
    "scillm @ git+https://github.com/grahama1970/scillm.git",
    "graph-memory @ git+https://github.com/grahama1970/graph-memory-operator.git",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "arxiv>=2.1.0",
    "pymupdf>=1.26.0",
    "pymupdf4llm>=0.0.10",
]

[tool.uv]
# No special config needed
