[project]
name = "batch-report"
version = "0.2.0"
description = "Post-run analysis and reporting for batch processing jobs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
batch-report = "batch_report.cli:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["batch_report*"]
