[project]
name = "battle-skill"
version = "0.1.0"
description = "Red vs Blue team security competition orchestrator"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
