[project]
name = "consume-feed"
version = "0.1.0"
description = "Hardened nightly feed ingestion for RSS, GitHub, and NVD"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
    "feedparser>=6.0.10",
    "python-arango>=7.5.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.8.0",
    "orjson>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sources", "util"]

[tool.hatch.build.targets.sdist]
include = [
    "cli.py",
    "config.py",
    "runner.py",
    "storage.py",
    "sources",
    "util",
    "configs",
    "sanity",
    "run.sh",
    "SKILL.md"
]
