[project]
name = "consume-movie"
version = "0.1.0"
description = "Consume ingested movies - search SRT, extract clips, take notes"
requires-python = ">=3.8"
dependencies = [
    "srt>=3.5.3",
    "whoosh>=2.7.4",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["consume_movie*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]