[project]
name = "fixture-graph"
version = "0.1.0"
description = "Generate publication-quality figures from code analysis"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.7.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
fixture-graph = "fixture_graph:app"
