[project]
name = "pdf-fixture-skill"
version = "0.1.0"
description = "Generate complete PDF test fixtures combining proper ReportLab tables and images"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.23.0",
    "reportlab>=4.0.0",
    "typer>=0.9.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
