[project]
name = "debug-fetcher"
version = "0.1.0"
description = "Automated fetch failure handling with memory integration and human collaboration"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["debug_fetcher"]

[project.scripts]
debug-fetcher = "debug_fetcher.cli:main"
