[project]
name = "discover-movies"
version = "0.1.0"
description = "Discover movies via TMDB API with taxonomy integration"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
