[project]
name = "discover-music"
version = "0.1.0"
description = "Discover music via MusicBrainz, ListenBrainz, Bandcamp"
requires-python = ">=3.10"
dependencies = [
    "musicbrainzngs>=0.7.1",
    "pylistenbrainz>=0.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
