[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-to-qra"
version = "0.1.0"
description = "Convert documents (PDF, URL, text) into Q&A pairs stored in memory"
readme = "SKILL.md"
requires-python = ">=3.9"
authors = [
    {name = "Pi Mono", email = "noreply@anthropic.com"}
]

dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
full = [
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf4llm>=0.1.0",
    "rapidfuzz>=3.0.0",
    "nltk>=3.8.0",
]

[tool.setuptools]
packages = ["doc_to_qra"]

[tool.setuptools.package-data]
doc_to_qra = ["py.typed"]
