[project]
name = "embedding-skill"
version = "1.0.0"
description = "Standalone embedding service for semantic search"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
