[project]
name = "audiobook-ingest"
version = "0.1.0"
description = "Process audiobooks from inbox: transcribe to text and organize audio for voice training"
requires-python = ">=3.11"

dependencies = [
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
