[project]
name = "ingest-movie-skill"
version = "0.1.0"
description = "Search NZBGeek and transcribe local video files for PersonaPlex emotion ingestion"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "subliminal>=2.5.0",
    "babelfish>=0.6.0",
]

[project.optional-dependencies]
audio-intensity = [
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]
schema-validation = [
    "jsonschema>=4.0.0",
]
subtitles = [
    "subliminal>=2.5.0",
]
all = [
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "jsonschema>=4.0.0",
    "subliminal>=2.5.0",
]

[project.scripts]
ingest-movie = "movie_ingest:app"
