[project]
name = "ingest-yt-history"
version = "0.1.0"
description = "Ingest YouTube/YouTube Music history from Google Takeout"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "google-api-python-client>=2.0",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.uv]
# Script-only project, no package to build
package = false
