[project]
name = "ops-chutes"
version = "0.1.0"
description = "Chutes.ai operational skill for budget tracking and status monitoring"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "manager.py",
    "util.py",
    "run.sh",
    "SKILL.md",
    "sanity",
]
