[project]
name = "orchestrate-skill"
version = "0.1.0"
description = "Orchestrate tasks from markdown files with enforced memory-first pre-hooks, quality-gate post-hooks, and session archiving"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[tool.uv]
dev-dependencies = []
